<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/textViewCorreo"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="15dp"
            android:text="@string/textViewContra"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPasword"
            android:layout_width="131dp"
            android:layout_height="17dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewContra" />

        <TextView
            android:id="@+id/textViewolvidado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="5dp"
            android:text="@string/textViewolvidado"
            android:textColor="@color/white"
            android:textSize="9sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasword" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="67dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#132CB8"
            android:text="@string/btnEntrar"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@+id/txtPasword"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxNocerrar"
            android:layout_width="135dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/textViewNosesion"
            android:textColor="@color/white"
            android:textSize="9sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail2" />

        <EditText
            android:id="@+id/editTextTextEmail2"
            android:layout_width="131dp"
            android:layout_height="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/editTextEmail"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCorreo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:background="#91CFEA"
        android:backgroundTint="#97CDE6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout1"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewfamoso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/textViewFamoso"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCrea"
            app:layout_constraintStart_toEndOf="@+id/textViewCrea"
            app:layout_constraintTop_toTopOf="@+id/textViewCrea" />

        <TextView
            android:id="@+id/textViewCrea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="45dp"
            android:text="@string/textViewCreaa"
            android:textColor="#3F51B5"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistrarte" />

        <Button
            android:id="@+id/btnRegistrarte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#4CAF50"
            android:drawableLeft="@drawable/baseline_person_24"
            android:text="@string/btnRegistrate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewinfo" />

        <TextView
            android:id="@+id/textViewinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="15dp"
            android:text="@string/textViewInfo"
            android:textColor="#3F51B5"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFechaVen" />

        <EditText
            android:id="@+id/editTextFechaVen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFechaNac"
            app:layout_constraintStart_toEndOf="@+id/textViewFechaNac"
            app:layout_constraintTop_toTopOf="@+id/textViewFechaNac" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/textViewSexo"
            app:layout_constraintStart_toEndOf="@+id/textViewSexo"
            app:layout_constraintTop_toTopOf="@+id/textViewSexo">

            <RadioButton
                android:id="@+id/radioButtonHombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonHombre" />

            <RadioButton
                android:id="@+id/radioButtonMujer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonMujer" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textViewNewContra"
            app:layout_constraintStart_toEndOf="@+id/textViewNewContra"
            app:layout_constraintTop_toTopOf="@+id/textViewNewContra" />

        <EditText
            android:id="@+id/editTextTextEmailAddress5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@+id/textViewNewCorreo"
            app:layout_constraintStart_toEndOf="@+id/textViewNewCorreo"
            app:layout_constraintTop_toTopOf="@+id/textViewNewCorreo" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textViewApellido"
            app:layout_constraintStart_toEndOf="@+id/textViewApellido"
            app:layout_constraintTop_toTopOf="@+id/textViewApellido" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textViewNombre"
            app:layout_constraintStart_toEndOf="@+id/textViewNombre"
            app:layout_constraintTop_toTopOf="@+id/textViewNombre" />

        <TextView
            android:id="@+id/textViewRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/textViewRegistrar"
            android:textColor="#0B2091"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewGratis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/textViewGratis"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegis" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:drawableLeft="@drawable/baseline_person_outline_24"
            android:text="@string/textviewNom"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGratis" />

        <TextView
            android:id="@+id/textViewApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/baseline_people_alt_24"
            android:text="@string/textviewApellido"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

        <TextView
            android:id="@+id/textViewNewCorreo"
            android:layout_width="103dp"
            android:layout_height="61dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/baseline_email_24"
            android:text="@string/textViewNewCorreo"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApellido" />

        <TextView
            android:id="@+id/textViewNewContra"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/baseline_password_24"
            android:text="@string/textViewContraseñaNew"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNewCorreo" />

        <TextView
            android:id="@+id/textViewSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/baseline_person_2_24"
            android:text="@string/textViewSexo"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNewContra" />

        <TextView
            android:id="@+id/textViewFechaNac"
            android:layout_width="102dp"
            android:layout_height="45dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/baseline_date_range_24"
            android:text="@string/textViewFechaNac"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSexo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>